--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body, html {
     margin: 0;
 }
 
-#holder {
+.holder {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,7 +13,7 @@ body, html {
     width: 100vw;
 }
 
-#item-1 {
+.item-1 {
     width: 100px;
     height: 100px;
     background-color: red;
